Revision history for exact

{{$NEXT}}

1.23      2023-09-12 16:06:03-07:00 America/Los_Angeles
        - Improve/fix import of packages into other packages (resolves issue #4)

1.22      2023-08-22 08:18:14-07:00 America/Los_Angeles
        - Relocate no experimental warnings (order of operations)

1.21      2023-08-21 17:53:58-07:00 America/Los_Angeles
        - Support for exact::class by setting up cor/nocor feature keywords

1.20      2023-08-18 15:29:54-07:00 America/Los_Angeles
        - Update for Perl 5.38 and beyond
        - Add PerlX::Maybe integration

1.19      2022-03-28 16:24:14-07:00 America/Los_Angeles
        - Silence a test warning

1.18      2022-03-19 17:34:44-07:00 America/Los_Angeles
        - Minor documentation update

1.17      2021-02-16 22:20:16-08:00 America/Los_Angeles
        - Add feature isa support
        - Default to no feature indirect

1.16      2021-02-05 03:07:56-08:00 America/Los_Angeles
        - Set Syntax::Keyword::Try minimum version to 0.18

1.15      2021-02-04 15:41:42-08:00 America/Los_Angeles
        - Add export() and exportable() methods
        - Switch from Try::Tiny to Syntax::Keyword::Try

1.14      2021-01-10 15:43:05-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.13      2020-07-17 20:16:34-07:00 America/Los_Angeles
        - Fix for "use open" not being exported

1.12      2019-11-05 09:17:12-08:00 America/Los_Angeles
        - Fix for Carp methods not being exported properly

1.11      2019-10-18 13:18:58-07:00 America/Los_Angeles
        - Prevent duplicate add_isa() calls

1.10      2019-10-06 16:27:22-07:00 America/Los_Angeles
        - Add inheritance capability
        - Add monkey_patch, add_isa, no_parent, and late_parent methods
        - Remove autoclean method
