@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.030.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.031.
 use strict;
 use warnings;
 
@@ -17,6 +17,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.014",
   "NAME" => "exact",
   "PREREQ_PM" => {
+    "B::Deparse" => 0,
     "Carp" => 0,
     "IO::File" => 0,
     "IO::Handle" => 0,
@@ -40,7 +41,7 @@ my %WriteMakefileArgs = (
     "Test2::V0" => 0,
     "Test::More" => 0
   },
-  "VERSION" => "1.23",
+  "VERSION" => "1.24",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -48,6 +49,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "B::Deparse" => 0,
   "Carp" => 0,
   "File::Spec" => 0,
   "IO::File" => 0,
