@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - export/exportable supports Perl 5.39 UNIVERSAL::import() method add
 
 1.23      2023-09-12 16:06:03-07:00 America/Los_Angeles
         - Improve/fix import of packages into other packages (resolves issue #4)
